# SmartBlinds

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  bootstrap.py  package-lock.json  package.json  run.py
lumisync-api/: Cargo.toml
lumisync-api/examples/: time_cloud_node.rs  time_device_node.rs  time_edge_node.rs  time_runner.py
lumisync-api/src/: adapter.rs  handler.rs  lib.rs  message.rs  router.rs  uuid.rs
lumisync-api/src/message/: application.rs  device.rs  error.rs  mod.rs
lumisync-api/src/models/: auth.rs  control.rs  device.rs  group.rs  message.rs  mod.rs  region.rs  settings.rs
lumisync-api/src/protocols/: json.rs  mod.rs  postcard.rs
lumisync-api/src/restful/: auth.rs  control.rs  device.rs  group.rs  mod.rs  region.rs  sensor.rs  setting.rs  window.rs
lumisync-api/src/time/: coordinator.rs  mod.rs  service.rs  status.rs  sync.rs
lumisync-api/src/transport/: crc.rs  error.rs  frame.rs  io.rs  mod.rs  protocol.rs  serializers.rs
lumisync-app/: Cargo.toml  tauri.conf.json
lumisync-app/page/: eslint.config.js  index.html  package.json  vite.config.js
lumisync-app/page/src/: App.jsx  index.css  index.jsx
lumisync-app/page/src/context/: LanguageContext.jsx  ThemeContext.jsx
lumisync-app/page/src/hooks/: useResponsive.js
lumisync-app/page/src/layouts/: MainLayout.jsx
lumisync-app/page/src/locales/: en.js  index.js  zh.js
lumisync-app/page/src/pages/: Debug.jsx  Devices.jsx  Networks.jsx  Stepper.jsx  Wifi.jsx
lumisync-app/src/: device.rs  error.rs  lib.rs  main.rs  network.rs  stepper.rs
lumisync-app/src/wifi/: mod.rs
lumisync-app/src/wifi/platform/: mod.rs  win.rs
lumisync-client/: Cargo.toml
lumisync-client/src/: lib.rs
lumisync-embedded/: Cargo.toml  MotorControl.cpp  MotorControl.h  lumisync-embedded.ino
lumisync-embedded/motor/: MotorControl.cpp  MotorControl.h  motor.ino
lumisync-embedded/sensor/: sensor.ino
lumisync-embedded/src/: error.rs  lib.rs  main.rs  types.rs
lumisync-embedded/src/communication/: mod.rs
lumisync-embedded/src/communication/device/: communicator.rs  mod.rs  status.rs
lumisync-embedded/src/communication/edge/: analyzer.rs  communicator.rs  mod.rs
lumisync-embedded/src/communication/transport/: framed.rs  mod.rs  protocol.rs  tcp.rs
lumisync-embedded/src/control/: mod.rs  pid.rs  system.rs
lumisync-embedded/src/device/: message_handler.rs  mod.rs  time_sync_client.rs
lumisync-embedded/src/edge/: mod.rs  time_sync_service.rs
lumisync-embedded/src/handler/: context.rs  mod.rs  pipeline.rs  stages.rs
lumisync-embedded/src/message/: mod.rs
lumisync-embedded/src/message/device/: communicator.rs  message_handler.rs  mod.rs  motor_control.rs  safety_manager.rs  status_manager.rs
lumisync-embedded/src/message/edge/: communicator.rs  mod.rs
lumisync-embedded/src/network/: dhcp.rs  manager.rs  mod.rs
lumisync-embedded/src/network/transport/: mod.rs  protocol.rs  tcp.rs
lumisync-embedded/src/protocol/: buffer.rs  message.rs  mod.rs  uuid_generator.rs  validation.rs
lumisync-embedded/src/sensor/: controller.rs  light_sensor.rs  mod.rs  temp_sensor.rs
lumisync-embedded/src/stepper/: mod.rs  motor.rs  motor_2pin.rs  motor_4pin.rs  stepper.rs
lumisync-embedded/src/storage/: memory.rs  mod.rs
lumisync-embedded/src/time/: device_sync.rs  edge_sync.rs  mod.rs  provider.rs  sync.rs
lumisync-embedded/src/transport/: mod.rs  udp.rs
lumisync-embedded/src/transport/ble/: central.rs  peripheral.rs
lumisync-host/: Cargo.toml
lumisync-host/src/: lib.rs  main.rs
lumisync-host/src/configs/: settings.rs  storage.rs
lumisync-host/src/handles/: control_handle.rs  mod.rs  sensor_handle.rs  window_handle.rs
lumisync-host/src/services/: mod.rs  remote_service.rs  sensor_service.rs
lumisync-mock/: Cargo.toml
lumisync-mock/src/: broker.rs  command.rs  lib.rs  main.rs  settings.rs  simulate.rs
lumisync-server/: Cargo.toml
lumisync-server/src/: app.rs  lib.rs  main.rs
lumisync-server/src/configs/: mod.rs  schema.rs  settings.rs  storage.rs
lumisync-server/src/errors/: api.rs  auth.rs  device.rs  group.rs  message.rs  mod.rs  region.rs  setting.rs
lumisync-server/src/handles/: auth_handle.rs  control_handle.rs  device_handle.rs  group_handle.rs  mod.rs  region_handle.rs  sensor_handle.rs  setting_handle.rs  sse_handle.rs  user_handle.rs  window_handle.rs
lumisync-server/src/middlewares/: auth_middleware.rs  mod.rs
lumisync-server/src/models/: device.rs  device_record.rs  device_setting.rs  event.rs  group.rs  mod.rs  region.rs  region_sensor.rs  region_setting.rs  sensor.rs  sensor_data.rs  sensor_record.rs  setting.rs  user.rs  user_group.rs  user_region.rs  user_window.rs  window.rs  window_record.rs  window_sensor.rs  window_setting.rs
lumisync-server/src/repositories/: device.rs  device_record.rs  device_setting.rs  event.rs  group.rs  mod.rs  region.rs  region_setting.rs  sensor.rs  sensor_record.rs  user.rs  user_region.rs  window.rs  window_record.rs
lumisync-server/src/services/: actuator_service.rs  analyser_service.rs  auth_service.rs  cache_service.rs  client_service.rs  connection_service.rs  edge_service.rs  event_bus.rs  message_service.rs  mod.rs  permission_service.rs  sensor_service.rs  sensor_service_legacy.rs  token_service.rs
lumisync-server/src/services/event_system/: event_bus.rs  mod.rs
lumisync-server/src/services/handlers/: analytics_handler.rs  cloud_time_sync_handler.rs  command_dispatcher.rs  device_status_handler.rs  mod.rs
lumisync-server/src/services/protocol/: mod.rs  tcp_protocol.rs  ws_protocol.rs
lumisync-server/tests/: api_test.rs  auth_test.rs  device_setting_test.rs  device_test.rs  group_test.rs  region_setting_test.rs  region_test.rs
lumisync-server/tests/common/: mock_app.rs  mod.rs
samples/controller/: Cargo.toml  build.sh
samples/controller/src/: main.rs
samples/edge/: Cargo.toml  build.sh
samples/edge/.cargo/: config.toml
samples/edge/src/: config.rs  error.rs  main.rs  wifi.rs
samples/esp-stepper/: Cargo.toml  build.rs  build.sh
samples/esp-stepper/src/: main.rs
src/: app.rs  (+5 more)
(+126 files in other folders)
