[workspace]
members = [
    "lumisync-analyser",
    "lumisync-api",
    "lumisync-client",
    "lumisync-embedded",
    "lumisync-server",
    "lumisync-mock"
]
exclude = ["samples"]
resolver = "2"

[workspace.dependencies]
lumisync_analyser = { path = "./lumisync-analyser" }
lumisync_api = { path = "./lumisync-api" }
serde = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false }
time = { version = "0.3", default-features = false }
tokio = { version = "1", default-features = false }
toml = { version = "0.8", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
utoipa = { version = "5", default-features = false }
uuid = { version = "1", default-features = false }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
