[package]
name = "lumisync_embedded"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.6", features = ["executor-thread"] }
embassy-futures = "0.1"
embassy-net = { version = "0.4", features = ["tcp", "dhcpv4"], optional = true }
embassy-sync = { version = "0.6", optional = true }
embassy-time = "0.3"
embedded-hal = "1"
embedded-hal-nb = "1"
embedded-io = "0.6"
embedded-io-async = { version = "0.6", optional = true }
libm = "0.2"
log = "0.4"
lumisync_api.workspace = true
serde = { workspace = true, features = ["derive"] }
static_cell = { version = "2", optional = true }
time.workspace = true
trouble-host = { git = "https://github.com/embassy-rs/trouble.git", optional = true }
uuid.workspace = true

[dev-dependencies]
embassy-time = { version = "0.3", features = ["generic-queue-8"] }
tokio = { workspace = true, features = ["macros", "rt"] }

[features]
default = ["std", "ble", "tcp"]
std = ["embassy-executor/arch-std", "embassy-time/std", "serde/std", "time/std", "uuid/v4"]
ble = ["dep:trouble-host", "dep:embassy-sync", "dep:static_cell"]
tcp = ["dep:embassy-net", "dep:embedded-io-async"]
