[package]
name = "lumisync-host"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
axum = "0.7"
config.workspace = true
rumqttc = "0.24"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite", "chrono"] }
tokio = { workspace = true, features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }