[package]
name = "lumisync_mock"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9"
rand_distr = "0.5"
rumqttd = { git = "https://github.com/bytebeamio/rumqtt" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
time = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["full"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
