[package]
name = "lumisync_mock"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9"
rand_distr = "0.5"
rumqttd = { git = "https://github.com/bytebeamio/rumqtt", default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
time = { workspace = true, features = ["default", "serde"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
