[package]
name = "lumisync-server"
version = "0.1.0"
edition = "2021"

[dependencies]
analyser.workspace = true
argon2 = "0.5"
async-trait = "0.1"
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
futures = "0.3"
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }
rumqttc = "0.24"
rustls-native-certs = "0.8"
rustls-pemfile = "2"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serialport = "4"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
time = { version = "0.3", features = ["serde"] }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml.workspace = true
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
