[package]
name = "lumisync_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
argon2 = "0.5"
async-trait = "0.1"
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
embedded-io-adapters = { version = "0.6", features = ["tokio-1"] }
futures = "0.3"
jsonwebtoken = "9"
lumisync_analyser.workspace = true
lumisync_api = { workspace = true, features = ["docs"] }
reqwest = { version = "0.12", features = ["json"] }
rumqttc = "0.24"
rustls-native-certs = "0.8"
rustls-pemfile = "2"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "time"] }
thiserror = "1"
time = { workspace = true, features = ["default", "serde"] }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread"] }
tokio-stream = "0.1"
toml = { workspace = true, features = ["parse"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
utoipa.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
lumisync_server = { path = ".", features = ["mock"] }

[features]
mock = []
