[package]
name = "edge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "edge"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[dependencies]
anyhow = "1"
esp-idf-svc = { version = "0.49", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
embedded-svc = { version = "0.28", default-features = false }
heapless = { version = "0.8", features = ["serde"]}
log = "0.4"
lumisync_embedded = { path = "../../lumisync-embedded" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[build-dependencies]
embuild = "0.32"
